<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PerfilModFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:padding="12dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/InicioPerfil"
            android:textSize="@dimen/tamMediano"
            android:textColor="@color/subTitulo"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            >

            <EditText
                android:id="@+id/apellModPerfil"
                style="@style/RegistroEditText"
                android:hint="@string/Apellido"
                android:selectAllOnFocus="false"
                />
            <EditText
                android:id="@+id/nomModPerfil"
                style="@style/RegistroEditText"
                android:hint="@string/nombre"
                />
            <EditText
                android:id="@+id/dniModPerfil"
                style="@style/RegistroEditText"
                android:hint="@string/DNI"
                />
            <EditText
                android:id="@+id/direcModPerfil"
                style="@style/RegistroEditText"
                android:hint="@string/direccion"
                />
            <EditText
                android:id="@+id/distrModPerfil"
                style="@style/RegistroEditText"
                android:hint="@string/distrito"
                />
            <TextView
                android:id="@+id/fech_NacModPerfil"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="4dp"
                style="@style/RegistroEditText"
                android:hint="@string/fechaNacimiento"
                />
            <EditText
                android:id="@+id/celuModPerfil"
                style="@style/RegistroEditText"
                android:hint="@string/celular"
                />
            <EditText
                android:id="@+id/correoModPerfil"
                style="@style/RegistroEditText"
                android:hint="@string/correo"
                />
            <EditText
                android:id="@+id/contrModPerfil"
                style="@style/RegistroEditText"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                />
            <Button
                android:id="@+id/btnGuarModPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamPequeño"
                android:text="@string/GuardModPerfil"
                android:layout_marginBottom="5dp"
                />
            <Button
                android:id="@+id/btnCancelarModPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamPequeño"
                android:text="@string/CancelarModPerfil"
                android:layout_marginBottom="5dp"
                />

        </LinearLayout>


    </ScrollView>
</FrameLayout>