<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activity.RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:padding="70dp"
        >
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:padding="12dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/reRegistro"
            android:textColor="@color/subTitulo"
            android:textSize="@dimen/tamMediano"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            >

            <EditText
                android:id="@+id/dniRegistro"
                style="@style/RegistroEditText"
                android:hint="@string/DNI"
                />
            <EditText
                android:id="@+id/apellRegistro"
                style="@style/RegistroEditText"
                android:hint="@string/Apellido"
                />
            <EditText
                android:id="@+id/nomRegistro"
                style="@style/RegistroEditText"
                android:hint="@string/nombre"
                />
            <EditText
                android:id="@+id/direcRegistro"
                style="@style/RegistroEditText"
                android:hint="@string/direccion"
                />
            <EditText
                android:id="@+id/distrRegistro"
                style="@style/RegistroEditText"
                android:hint="@string/distrito"
                />
            <TextView
                android:id="@+id/fech_NacRegistro"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="4dp"
                style="@style/RegistroEditText"
                android:hint="@string/fechaNacimiento"
                />
            <EditText
                android:id="@+id/celuRegistro"
                style="@style/RegistroEditText"
                android:hint="@string/celular"
                />
            <EditText
                android:id="@+id/correoRegistro"
                style="@style/RegistroEditText"
                android:hint="@string/correo"
                />
            <EditText
                android:id="@+id/contrRegistro"
                style="@style/RegistroEditText"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                />
            <Button
                android:id="@+id/btnregRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamPequeño"
                android:text="@string/reRegistro"
                android:layout_marginBottom="20dp"
                />

        </LinearLayout>


    </ScrollView>

</LinearLayout>
