<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:padding="100dp"
        >
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:padding="12dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/iniLogin"
            android:textColor="@color/subTitulo"
            android:textSize="@dimen/tamMediano"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            >
            <EditText
                android:id="@+id/correoLogin"
                style="@style/RegistroEditText"
                android:hint="@string/corrLogin"
                />
            <EditText
                android:id="@+id/contrLogin"
                style="@style/RegistroEditText"
                android:hint="@string/contLogin"
                android:inputType="textPassword"
                />
            <Button
                android:id="@+id/btnIniciarLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamPequeño"
                android:text="@string/iniLogin"
                />
            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamPequeño"
                android:text="@string/olviLogin"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/primerLogin"
                android:textSize="@dimen/tamMediano"
                />
            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamPequeño"
                android:text="@string/regLogin"
                android:layout_marginBottom="20dp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

